--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,8 @@
 [Control_specifications]
-aspect_threshold = 0
 maximum_slope_lenght = 0
-maximum_slope_unit = metric
-rounded_to = shorter
 average_soil_factory_patcher = false
-default_background_value = 0
+maximum_slope_metric = true
+aspect_threshold = 0
 slope_threhold = 0
 smallest_patch_size = 0
 
@@ -16,5 +14,5 @@ output_directory = /home/fundor333/QGis/MatrixElaborator/
 [Config_configuration]
 config_file_name = config.ini
 config_dir = /home/fundor333/QGis/MatrixElaborator/config/
-config_path = Funziona
+config_path = /home/fundor333/QGis/MatrixElaborator/config/config.ini
 
