--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/raster_type_parser/*.txt
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
